k8s/database/istio-postgres.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: postgres-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 5432
        name: tcp-postgres
        protocol: TCP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - postgres-gateway
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: postgres-service
            port:
              number: 5432
